--- a/index.html
+++ b/index.html
@@ -466,6 +466,50 @@
 
     <!-- plans end -->
 
+    <div class="contact">
+
+       <div class="container">
+      <div class="con">
+        <div class="contact-content">
+            <h1>Apply For Early Access</h1>
+            <p>To join the Duodata early adopter programe, Please fill out the form bellow, We`ll review your submissionand contact you with next step.</p>
+        </div>
+        <p class="contact-info">Email us at <a href="email">info@duodata.ai</a>, call <a href="tel:(425) 440-0009">(425) 440-0009</a>, or visit our main website at duodata.ai for more information. We look forward to transforming metrics management together.</p>
+      </div>
+
+        <form action="">
+       <div class="">
+        <label for="">Name</label>
+        <input type="text" class="form-control" placeholder="Enter Name" required> 
+       </div>
+      <div class="">
+        <label for="">TiTel</label>
+        <input type="text"class="form-control" placeholder="Enter Name" required>
+      </div> 
+      <div class="">
+        <label for="">Company/Orgnization</label>
+        <input type="text" class="form-control" placeholder="Company Name" required>
+      </div>
+      <div class="">
+        <label for="">Email</label>
+        <input type="email" class="form-control" name="" id="" placeholder="Enter Email" required>
+      </div>
+      <div class="">
+        <label for="">How many metrics do you manage?</label>
+        <input class="form-control" type="number">
+      </div>
+      <div class="">
+        <label for="">Briefly describe your current data environment or challenges</label>
+        <textarea class="form-control" name="" id=""></textarea>    
+      </div>
+     <button>Submit</button>
+        
+    </form>
+       </div>
+    </div>
+
+    </div>
+
 
 
     <!-- footer -->
